# masters

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Pipfile  README.md  mypy.ini  pyproject.toml  run.py  setup.py  tox.ini
configs/: config.yaml
configs/environment/: cartpole.yaml
configs/model/: inhibitory.yaml
masters/: __init__.py  constants.py  data.py  env_wrapper.py
masters/a2c/: action.py  agent.py  trainer.py
masters/configs/: __init__.py  environment.py  model.py
masters/models/: cartpole.py
masters/networks/: __init__.py  actor.py  critic.py  mlp.py
notebooks/: Agent.ipynb  GaussianReceptiveFields.ipynb  GaussianReceptiveFields_preview.ipynb  GaussionReceptiveFieldsEncoder.ipynb  MLP.ipynb  fashion-mnist.ipynb
run/: cartpole.py
tests/: conftest.py  test_agent.py  test_make_wrapped_env.py  test_mlp.py  test_positive_encoder.py  test_trainer.py
