[tool.poetry]
name = "masters"
version = "0.1.0"
description = ""
authors = ["Daniil Gafni"]

[tool.poetry.dependencies]
python = "^3.8"
bindsnet = {path = "./bindsnet", develop = true}
gym = {extras = ["atari"], version = "^0.18.0"}

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.1+cu111 torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html"
