[tool.poetry]
name = "masters"
version = "0.1.0"
description = ""
authors = ["Daniil Gafni"]

[tool.poetry.dependencies]
python = "^3.8"
bindsnet = {path = "./bindsnet", develop = true}
gym = {extras = ["atari"], version = "^0.18.0"}
hydra-core = "1.1.0.dev5"
hydra-colorlog = "1.1.0.dev1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
pytest = "^6.2.3"
mypy = "^0.812"
flake8 = "^3.9.1"
autoflake = "^1.4"
black = "^20.8b1"
pre-commit = "^2.12.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | build
  | dist
  | configs
  | bindsnet
  )/
'''

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["masters", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.8.1+cu111 torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html"
